<resources>
    <string name="app_name">DndQuickToggle</string>
    <string name="tile_name">DnD</string>
    <string name="Close">Close</string>
    <string name="STOP">STOP</string>
    <string name="Min_15">15 Min</string>
    <string name="Min_30">30 Min</string>
    <string name="Min_60">60 Min</string>
    <string name="Do_Not_Disturb">Do Not Disturb</string>
    <string name="OK">OK</string>
    <string name="dnd_broadcast">DND_BROADCAST</string>
    <string name="Min">Min</string>
    <string name="Err_permission">Missing DnD Permission</string>
    <string name="Err_none">Clean</string>
    <string name="Welcome">Thank you for installing this app. This app can be used via quick-settings tile.</string>
    <string name="Min_0">0 Min</string>
</resources>
